--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser-dynamic": "2.1.1",
     "@angular/platform-server": "2.1.1",
     "@ionic/storage": "1.1.6",
-    "ionic-angular": "2.0.0-rc.2",
+    "ionic-angular": "2.0.0-rc.3",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
     "ng2-translate": "^4.0.0",
@@ -45,5 +45,8 @@
       "locator": "ios"
     }
   ],
-  "description": ": An Ionic project"
+  "description": ": An Ionic project",
+  "config": {
+    "ionic_source_map": "source-map"
+  }
 }
