--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@angular/platform-browser": "2.1.1",
     "@angular/platform-browser-dynamic": "2.1.1",
     "@angular/platform-server": "2.1.1",
+    "@ionic/app-scripts": "0.0.46-201611300357",
     "@ionic/storage": "1.1.6",
-    "ionic-angular": "2.0.0-rc.3",
+    "ionic-angular": "^2.0.0-rc.3-201611282011",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
     "ng2-translate": "^4.0.0",
