--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.6",
-    "ionic-angular": "^2.0.0-rc.3-201612080433",
+    "ionic-angular": "^2.0.0-rc.4",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
     "ng2-translate": "^4.0.0",
@@ -26,7 +26,7 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.46-201612072201",
+    "@ionic/app-scripts": "0.0.47",
     "typescript": "2.0.6"
   },
   "cordovaPlugins": [
